besser/BUML/notations/deployment/deploymentParser.py
# Generated from ./deployment.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class deploymentParser ( Parser ):

    grammarFileName = "deployment.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Deployment model'", "'{'", "'applications'",
                     "'}'", "'services'", "'containers'", "'deployments'",
                     "'regions'", "'clusters'", "'->'", "'name'", "':'",
                     "','", "'image'", "'port'", "'cpu_required'", "'m'",
                     "'memory_required'", "'Mi'", "'domain_model'", "'target_port'",
                     "'protocol'", "'type'", "'app_name'", "'cpu_limit'",
                     "'memory_limit'", "'replicas'", "'['", "']'", "'zones'",
                     "'public_cluster'", "'number_of_nodes'", "'provider'",
                     "'config_file'", "'net_config'", "'networks'", "'subnetworks'",
                     "'private_cluster'", "'HTTP'", "'HTTPS'", "'TCP'",
                     "'UDP'", "'ALL'", "'lb'", "'ingress'", "'egress'",
                     "'google'", "'aws'", "'azure'", "'other'", "'True'",
                     "'False'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>",
                      "<INVALID>", "WS", "ML_COMMENT", "SL_COMMENT", "INT",
                      "ID", "ID_REG", "STRING" ]

    RULE_architecture = 0
    RULE_application = 1
    RULE_service = 2
    RULE_container = 3
    RULE_deployment = 4
    RULE_region = 5
    RULE_cluster = 6
    RULE_publicCluster = 7
    RULE_privateCluster = 8
    RULE_service_list = 9
    RULE_deployment_list = 10
    RULE_region_list = 11
    RULE_protocol = 12
    RULE_service_type = 13
    RULE_provider = 14
    RULE_boolean = 15

    ruleNames =  [ "architecture", "application", "service", "container",
                   "deployment", "region", "cluster", "publicCluster", "privateCluster",
                   "service_list", "deployment_list", "region_list", "protocol",
                   "service_type", "provider", "boolean" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    WS=53
    ML_COMMENT=54
    SL_COMMENT=55
    INT=56
    ID=57
    ID_REG=58
    STRING=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ArchitectureContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def application(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(deploymentParser.ApplicationContext)
            else:
                return self.getTypedRuleContext(deploymentParser.ApplicationContext,i)


        def service(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(deploymentParser.ServiceContext)
            else:
                return self.getTypedRuleContext(deploymentParser.ServiceContext,i)


        def container(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(deploymentParser.ContainerContext)
            else:
                return self.getTypedRuleContext(deploymentParser.ContainerContext,i)


        def deployment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(deploymentParser.DeploymentContext)
            else:
                return self.getTypedRuleContext(deploymentParser.DeploymentContext,i)


        def cluster(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(deploymentParser.ClusterContext)
            else:
                return self.getTypedRuleContext(deploymentParser.ClusterContext,i)


        def region(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(deploymentParser.RegionContext)
            else:
                return self.getTypedRuleContext(deploymentParser.RegionContext,i)


        def getRuleIndex(self):
            return deploymentParser.RULE_architecture

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArchitecture" ):
                listener.enterArchitecture(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArchitecture" ):
                listener.exitArchitecture(self)




    def architecture(self):

        localctx = deploymentParser.ArchitectureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_architecture)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(deploymentParser.T__0)
            self.state = 33
            self.match(deploymentParser.T__1)
            self.state = 34
            self.match(deploymentParser.T__2)
            self.state = 35
            self.match(deploymentParser.T__1)
            self.state = 37
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 36
                self.application()
                self.state = 39
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==10):
                    break

            self.state = 41
            self.match(deploymentParser.T__3)
            self.state = 42
            self.match(deploymentParser.T__4)
            self.state = 43
            self.match(deploymentParser.T__1)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 44
                self.service()
                self.state = 47
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==10):
                    break

            self.state = 49
            self.match(deploymentParser.T__3)
            self.state = 50
            self.match(deploymentParser.T__5)
            self.state = 51
            self.match(deploymentParser.T__1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 52
                self.container()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==10):
                    break

            self.state = 57
            self.match(deploymentParser.T__3)
            self.state = 58
            self.match(deploymentParser.T__6)
            self.state = 59
            self.match(deploymentParser.T__1)
            self.state = 61
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 60
                self.deployment()
                self.state = 63
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==10):
                    break

            self.state = 65
            self.match(deploymentParser.T__3)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 66
                self.match(deploymentParser.T__7)
                self.state = 67
                self.match(deploymentParser.T__1)
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 68
                    self.region()
                    self.state = 71
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==10):
                        break

                self.state = 73
                self.match(deploymentParser.T__3)


            self.state = 77
            self.match(deploymentParser.T__8)
            self.state = 78
            self.match(deploymentParser.T__1)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 79
                self.cluster()
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==10 or _la==38):
                    break

            self.state = 84
            self.match(deploymentParser.T__3)
            self.state = 85
            self.match(deploymentParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ApplicationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(deploymentParser.ID, 0)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(deploymentParser.STRING)
            else:
                return self.getToken(deploymentParser.STRING, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(deploymentParser.INT)
            else:
                return self.getToken(deploymentParser.INT, i)

        def getRuleIndex(self):
            return deploymentParser.RULE_application

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterApplication" ):
                listener.enterApplication(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitApplication" ):
                listener.exitApplication(self)




    def application(self):

        localctx = deploymentParser.ApplicationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_application)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(deploymentParser.T__9)
            self.state = 88
            self.match(deploymentParser.T__10)
            self.state = 89
            self.match(deploymentParser.T__11)
            self.state = 90
            self.match(deploymentParser.ID)
            self.state = 91
            self.match(deploymentParser.T__12)
            self.state = 92
            self.match(deploymentParser.T__13)
            self.state = 93
            self.match(deploymentParser.T__11)
            self.state = 94
            self.match(deploymentParser.STRING)
            self.state = 95
            self.match(deploymentParser.T__12)
            self.state = 96
            self.match(deploymentParser.T__14)
            self.state = 97
            self.match(deploymentParser.T__11)
            self.state = 98
            self.match(deploymentParser.INT)
            self.state = 99
            self.match(deploymentParser.T__12)
            self.state = 100
            self.match(deploymentParser.T__15)
            self.state = 101
            self.match(deploymentParser.T__11)
            self.state = 102
            self.match(deploymentParser.INT)
            self.state = 103
            self.match(deploymentParser.T__16)
            self.state = 104
            self.match(deploymentParser.T__12)
            self.state = 105
            self.match(deploymentParser.T__17)
            self.state = 106
            self.match(deploymentParser.T__11)
            self.state = 107
            self.match(deploymentParser.INT)
            self.state = 108
            self.match(deploymentParser.T__18)
            self.state = 109
            self.match(deploymentParser.T__12)
            self.state = 110
            self.match(deploymentParser.T__19)
            self.state = 111
            self.match(deploymentParser.T__11)
            self.state = 112
            self.match(deploymentParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ServiceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.app = None # Token

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(deploymentParser.ID)
            else:
                return self.getToken(deploymentParser.ID, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(deploymentParser.INT)
            else:
                return self.getToken(deploymentParser.INT, i)

        def protocol(self):
            return self.getTypedRuleContext(deploymentParser.ProtocolContext,0)


        def service_type(self):
            return self.getTypedRuleContext(deploymentParser.Service_typeContext,0)


        def getRuleIndex(self):
            return deploymentParser.RULE_service

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterService" ):
                listener.enterService(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitService" ):
                listener.exitService(self)




    def service(self):

        localctx = deploymentParser.ServiceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_service)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(deploymentParser.T__9)
            self.state = 115
            self.match(deploymentParser.T__10)
            self.state = 116
            self.match(deploymentParser.T__11)
            self.state = 117
            self.match(deploymentParser.ID)
            self.state = 118
            self.match(deploymentParser.T__12)
            self.state = 119
            self.match(deploymentParser.T__14)
            self.state = 120
            self.match(deploymentParser.T__11)
            self.state = 121
            self.match(deploymentParser.INT)
            self.state = 122
            self.match(deploymentParser.T__12)
            self.state = 123
            self.match(deploymentParser.T__20)
            self.state = 124
            self.match(deploymentParser.T__11)
            self.state = 125
            self.match(deploymentParser.INT)
            self.state = 126
            self.match(deploymentParser.T__12)
            self.state = 127
            self.match(deploymentParser.T__21)
            self.state = 128
            self.match(deploymentParser.T__11)
            self.state = 129
            self.protocol()
            self.state = 130
            self.match(deploymentParser.T__12)
            self.state = 131
            self.match(deploymentParser.T__22)
            self.state = 132
            self.match(deploymentParser.T__11)
            self.state = 133
            self.service_type()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 134
                self.match(deploymentParser.T__12)
                self.state = 135
                self.match(deploymentParser.T__23)
                self.state = 136
                self.match(deploymentParser.T__11)
                self.state = 137
                localctx.app = self.match(deploymentParser.ID)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContainerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(deploymentParser.ID)
            else:
                return self.getToken(deploymentParser.ID, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(deploymentParser.INT)
            else:
                return self.getToken(deploymentParser.INT, i)

        def getRuleIndex(self):
            return deploymentParser.RULE_container

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContainer" ):
                listener.enterContainer(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContainer" ):
                listener.exitContainer(self)




    def container(self):

        localctx = deploymentParser.ContainerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_container)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(deploymentParser.T__9)
            self.state = 141
            self.match(deploymentParser.T__10)
            self.state = 142
            self.match(deploymentParser.T__11)
            self.state = 143
            self.match(deploymentParser.ID)
            self.state = 144
            self.match(deploymentParser.T__12)
            self.state = 145
            self.match(deploymentParser.T__23)
            self.state = 146
            self.match(deploymentParser.T__11)
            self.state = 147
            self.match(deploymentParser.ID)
            self.state = 148
            self.match(deploymentParser.T__12)
            self.state = 149
            self.match(deploymentParser.T__24)
            self.state = 150
            self.match(deploymentParser.T__11)
            self.state = 151
            self.match(deploymentParser.INT)
            self.state = 152
            self.match(deploymentParser.T__16)
            self.state = 153
            self.match(deploymentParser.T__12)
            self.state = 154
            self.match(deploymentParser.T__25)
            self.state = 155
            self.match(deploymentParser.T__11)
            self.state = 156
            self.match(deploymentParser.INT)
            self.state = 157
            self.match(deploymentParser.T__18)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeploymentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(deploymentParser.ID)
            else:
                return self.getToken(deploymentParser.ID, i)

        def INT(self):
            return self.getToken(deploymentParser.INT, 0)

        def getRuleIndex(self):
            return deploymentParser.RULE_deployment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeployment" ):
                listener.enterDeployment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeployment" ):
                listener.exitDeployment(self)




    def deployment(self):

        localctx = deploymentParser.DeploymentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_deployment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(deploymentParser.T__9)
            self.state = 160
            self.match(deploymentParser.T__10)
            self.state = 161
            self.match(deploymentParser.T__11)
            self.state = 162
            self.match(deploymentParser.ID)
            self.state = 163
            self.match(deploymentParser.T__12)
            self.state = 164
            self.match(deploymentParser.T__26)
            self.state = 165
            self.match(deploymentParser.T__11)
            self.state = 166
            self.match(deploymentParser.INT)
            self.state = 167
            self.match(deploymentParser.T__12)
            self.state = 168
            self.match(deploymentParser.T__5)
            self.state = 169
            self.match(deploymentParser.T__11)
            self.state = 170
            self.match(deploymentParser.T__27)
            self.state = 171
            self.match(deploymentParser.ID)
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 172
                self.match(deploymentParser.T__12)
                self.state = 173
                self.match(deploymentParser.ID)


            self.state = 176
            self.match(deploymentParser.T__28)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RegionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_REG(self, i:int=None):
            if i is None:
                return self.getTokens(deploymentParser.ID_REG)
            else:
                return self.getToken(deploymentParser.ID_REG, i)

        def getRuleIndex(self):
            return deploymentParser.RULE_region

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRegion" ):
                listener.enterRegion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRegion" ):
                listener.exitRegion(self)




    def region(self):

        localctx = deploymentParser.RegionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_region)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 178
            self.match(deploymentParser.T__9)
            self.state = 179
            self.match(deploymentParser.T__10)
            self.state = 180
            self.match(deploymentParser.T__11)
            self.state = 181
            self.match(deploymentParser.ID_REG)
            self.state = 192
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 182
                self.match(deploymentParser.T__12)
                self.state = 183
                self.match(deploymentParser.T__29)
                self.state = 184
                self.match(deploymentParser.T__11)
                self.state = 185
                self.match(deploymentParser.T__27)
                self.state = 186
                self.match(deploymentParser.ID_REG)
                self.state = 189
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==13:
                    self.state = 187
                    self.match(deploymentParser.T__12)
                    self.state = 188
                    self.match(deploymentParser.ID_REG)


                self.state = 191
                self.match(deploymentParser.T__28)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClusterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def privateCluster(self):
            return self.getTypedRuleContext(deploymentParser.PrivateClusterContext,0)


        def publicCluster(self):
            return self.getTypedRuleContext(deploymentParser.PublicClusterContext,0)


        def getRuleIndex(self):
            return deploymentParser.RULE_cluster

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCluster" ):
                listener.enterCluster(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCluster" ):
                listener.exitCluster(self)




    def cluster(self):

        localctx = deploymentParser.ClusterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_cluster)
        try:
            self.state = 196
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [38]:
                self.enterOuterAlt(localctx, 1)
                self.state = 194
                self.privateCluster()
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 195
                self.publicCluster()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PublicClusterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(deploymentParser.ID)
            else:
                return self.getToken(deploymentParser.ID, i)

        def INT(self):
            return self.getToken(deploymentParser.INT, 0)

        def provider(self):
            return self.getTypedRuleContext(deploymentParser.ProviderContext,0)


        def STRING(self):
            return self.getToken(deploymentParser.STRING, 0)

        def service_list(self):
            return self.getTypedRuleContext(deploymentParser.Service_listContext,0)


        def deployment_list(self):
            return self.getTypedRuleContext(deploymentParser.Deployment_listContext,0)


        def region_list(self):
            return self.getTypedRuleContext(deploymentParser.Region_listContext,0)


        def boolean(self):
            return self.getTypedRuleContext(deploymentParser.BooleanContext,0)


        def getRuleIndex(self):
            return deploymentParser.RULE_publicCluster

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPublicCluster" ):
                listener.enterPublicCluster(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPublicCluster" ):
                listener.exitPublicCluster(self)




    def publicCluster(self):

        localctx = deploymentParser.PublicClusterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_publicCluster)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 198
            self.match(deploymentParser.T__9)
            self.state = 199
            self.match(deploymentParser.T__30)
            self.state = 200
            self.match(deploymentParser.T__10)
            self.state = 201
            self.match(deploymentParser.T__11)
            self.state = 202
            self.match(deploymentParser.ID)
            self.state = 203
            self.match(deploymentParser.T__12)
            self.state = 204
            self.match(deploymentParser.T__31)
            self.state = 205
            self.match(deploymentParser.T__11)
            self.state = 206
            self.match(deploymentParser.INT)
            self.state = 207
            self.match(deploymentParser.T__12)
            self.state = 208
            self.match(deploymentParser.T__32)
            self.state = 209
            self.match(deploymentParser.T__11)
            self.state = 210
            self.provider()
            self.state = 211
            self.match(deploymentParser.T__12)
            self.state = 212
            self.match(deploymentParser.T__33)
            self.state = 213
            self.match(deploymentParser.T__11)
            self.state = 214
            self.match(deploymentParser.STRING)
            self.state = 215
            self.match(deploymentParser.T__12)
            self.state = 216
            self.service_list()
            self.state = 217
            self.match(deploymentParser.T__12)
            self.state = 218
            self.deployment_list()
            self.state = 219
            self.match(deploymentParser.T__12)
            self.state = 220
            self.region_list()
            self.state = 225
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 221
                self.match(deploymentParser.T__12)
                self.state = 222
                self.match(deploymentParser.T__34)
                self.state = 223
                self.match(deploymentParser.T__11)
                self.state = 224
                self.boolean()


            self.state = 237
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 227
                self.match(deploymentParser.T__12)
                self.state = 228
                self.match(deploymentParser.T__35)
                self.state = 229
                self.match(deploymentParser.T__11)
                self.state = 230
                self.match(deploymentParser.T__27)
                self.state = 231
                self.match(deploymentParser.ID)
                self.state = 234
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==13:
                    self.state = 232
                    self.match(deploymentParser.T__12)
                    self.state = 233
                    self.match(deploymentParser.ID)


                self.state = 236
                self.match(deploymentParser.T__28)


            self.state = 249
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 239
                self.match(deploymentParser.T__12)
                self.state = 240
                self.match(deploymentParser.T__36)
                self.state = 241
                self.match(deploymentParser.T__11)
                self.state = 242
                self.match(deploymentParser.T__27)
                self.state = 243
                self.match(deploymentParser.ID)
                self.state = 246
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==13:
                    self.state = 244
                    self.match(deploymentParser.T__12)
                    self.state = 245
                    self.match(deploymentParser.ID)


                self.state = 248
                self.match(deploymentParser.T__28)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrivateClusterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(deploymentParser.ID, 0)

        def getRuleIndex(self):
            return deploymentParser.RULE_privateCluster

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrivateCluster" ):
                listener.enterPrivateCluster(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrivateCluster" ):
                listener.exitPrivateCluster(self)




    def privateCluster(self):

        localctx = deploymentParser.PrivateClusterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_privateCluster)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 251
            self.match(deploymentParser.T__37)
            self.state = 252
            self.match(deploymentParser.T__1)
            self.state = 253
            self.match(deploymentParser.T__10)
            self.state = 254
            self.match(deploymentParser.T__11)
            self.state = 255
            self.match(deploymentParser.ID)
            self.state = 256
            self.match(deploymentParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Service_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(deploymentParser.ID)
            else:
                return self.getToken(deploymentParser.ID, i)

        def getRuleIndex(self):
            return deploymentParser.RULE_service_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterService_list" ):
                listener.enterService_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitService_list" ):
                listener.exitService_list(self)




    def service_list(self):

        localctx = deploymentParser.Service_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_service_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 258
            self.match(deploymentParser.T__4)
            self.state = 259
            self.match(deploymentParser.T__11)
            self.state = 260
            self.match(deploymentParser.T__27)
            self.state = 261
            self.match(deploymentParser.ID)
            self.state = 264
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 262
                self.match(deploymentParser.T__12)
                self.state = 263
                self.match(deploymentParser.ID)


            self.state = 266
            self.match(deploymentParser.T__28)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Deployment_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
